tests/semantic_cases/invalid/operator_or_requires_boolean.ob0
(* INVALID: OR requires BOOLEAN operands, not INTEGER literals *)
MODULE Main;
VAR b: BOOLEAN;
BEGIN
  b := 1 OR 0
END Main.
